<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.itsallcode.openfasttrace</groupId>
    <artifactId>openfasttrace-language-server</artifactId>
    <version>0.7</version>
    <packaging>jar</packaging>

    <name>OpenFastTrace Language Server</name>
    <description>LSP server providing IDE navigation, hover documentation, and quick fixes for OpenFastTrace requirement tracing.</description>
    <url>https://github.com/fgorke/openfasttrace-language-server</url>
    <inceptionYear>2026</inceptionYear>

    <licenses>
        <license>
            <name>GNU General Public License v3.0 or later</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- Dependency versions -->
        <lsp4j.version>1.0.0</lsp4j.version>
        <openfasttrace.version>4.9.0</openfasttrace.version>
        <tinylog.version>2.7.0</tinylog.version>
        <junit.version>6.1.1</junit.version>
        <assertj.version>3.27.7</assertj.version>
        <mockito.version>5.23.0</mockito.version>

        <!-- Plugin versions -->
        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
        <maven-shade-plugin.version>3.6.0</maven-shade-plugin.version>
        <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
    </properties>

    <dependencies>
        <!-- LSP4J -->
        <dependency>
            <groupId>org.eclipse.lsp4j</groupId>
            <artifactId>org.eclipse.lsp4j</artifactId>
            <version>${lsp4j.version}</version>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>org.tinylog</groupId>
            <artifactId>tinylog-api</artifactId>
            <version>${tinylog.version}</version>
        </dependency>
        <dependency>
            <groupId>org.tinylog</groupId>
            <artifactId>tinylog-impl</artifactId>
            <version>${tinylog.version}</version>
            <scope>runtime</scope>
        </dependency>

        <!-- OpenFastTrace: individual modules (ADR-0004) -->
        <dependency>
            <groupId>org.itsallcode.openfasttrace</groupId>
            <artifactId>openfasttrace-api</artifactId>
            <version>${openfasttrace.version}</version>
        </dependency>
        <dependency>
            <groupId>org.itsallcode.openfasttrace</groupId>
            <artifactId>openfasttrace-core</artifactId>
            <version>${openfasttrace.version}</version>
        </dependency>
        <dependency>
            <groupId>org.itsallcode.openfasttrace</groupId>
            <artifactId>openfasttrace-importer-markdown</artifactId>
            <version>${openfasttrace.version}</version>
        </dependency>
        <dependency>
            <groupId>org.itsallcode.openfasttrace</groupId>
            <artifactId>openfasttrace-importer-tag</artifactId>
            <version>${openfasttrace.version}</version>
        </dependency>
        <!--
            Gherkin (.feature) moved out of the tag importer into its own module in OFT 4.7.0.
            Without this dependency .feature files are silently no longer imported.
        -->
        <dependency>
            <groupId>org.itsallcode.openfasttrace</groupId>
            <artifactId>openfasttrace-importer-gherkin</artifactId>
            <version>${openfasttrace.version}</version>
        </dependency>
        <dependency>
            <groupId>org.itsallcode.openfasttrace</groupId>
            <artifactId>openfasttrace-importer-restructuredtext</artifactId>
            <version>${openfasttrace.version}</version>
        </dependency>

        <!-- Reporters for the trace report generated on request -->
        <dependency>
            <groupId>org.itsallcode.openfasttrace</groupId>
            <artifactId>openfasttrace-reporter-html</artifactId>
            <version>${openfasttrace.version}</version>
        </dependency>
        <dependency>
            <groupId>org.itsallcode.openfasttrace</groupId>
            <artifactId>openfasttrace-reporter-plaintext</artifactId>
            <version>${openfasttrace.version}</version>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </plugin>

            <!-- Fat JAR for standalone server execution -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${maven-shade-plugin.version}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>standalone</shadedClassifierName>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>org.itsallcode.openfasttrace.lsp.ServerLauncher</mainClass>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Code coverage -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
